# Papertrail

./: .env.example  .gitignore  CLAUDE.md  conftest.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
apps/admin_dashboard/: __init__.py  apps.py  mixins.py  urls.py  views.py
apps/collaboration/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/core/: __init__.py  admin.py  apps.py  context_processors.py  middleware.py  mixins.py  models.py  services.py  urls.py  views.py
apps/organizations/: __init__.py  admin.py  apps.py  models.py  services.py  urls.py  views.py
docs/: PRODUCTION_BACKLOG.md
docs/guides/: postgresql-migration.md
papertrail/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
setup/: README.md  create_mock_data.ps1  full_setup.ps1  generate_env_keys.ps1
static/css/: output.css
static/src/: input.css
templates/: base.html
templates/accounts/: login.html  register.html
templates/admin_dashboard/: audit_log.html  base.html  base_admin.html  hierarchy.html  index.html  office_detail.html  offices.html  organization_detail.html  organizations.html  pending_approvals.html  settings.html  user_detail.html  users.html  workflows.html
templates/collaboration/: comments_partial.html  notifications.html
templates/core/: dashboard.html
templates/dashboards/: user_dashboard.html
templates/includes/: toast.html
tests/: __init__.py
tests/accounts/: test_models.py
(+28 files in other folders)
